@@ -9,16 +9,12 @@ import com.quickcart.backend.exception.AccessDeniedException;
 import com.quickcart.backend.exception.ResourceNotFoundException;
 import com.quickcart.backend.repository.OrderRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
-import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * Service for querying orders.
- * Separated from OrderService to maintain single responsibility.
- */
 @Service
 @RequiredArgsConstructor
 public class OrderQueryService {
@@ -26,37 +22,36 @@ public class OrderQueryService {
     private final OrderRepository orderRepository;
 
     /**
-     * Get all orders for the authenticated user.
-     * Manufacturers see orders they received.
-     * Retailers see orders they placed.
+     * Get paginated orders for authenticated user.
+     * Manufacturer → orders received
+     * Retailer → orders placed
      */
-    public List<OrderResponse> getOrders(User user) {
-        List<Order> orders;
+    public Page<OrderResponse> getOrders(User user, Pageable pageable) {
 
-        boolean isManufacturer = user.hasRole("MANUFACTURER");
+        Page<Order> ordersPage;
 
-        if (isManufacturer) {
-            orders = orderRepository.findByManufacturer(user);
+        if (user.hasRole("MANUFACTURER")) {
+            ordersPage = orderRepository.findByManufacturer(user, pageable);
         } else {
-            orders = orderRepository.findByRetailer(user);
+            ordersPage = orderRepository.findByRetailer(user, pageable);
         }
 
-        return orders.stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        return ordersPage.map(this::mapToResponse);
     }
 
     /**
-     * Get a specific order by ID.
-     * Validates that the user is either the manufacturer or retailer of the order.
+     * Get single order by ID with authorization check.
      */
     public OrderResponse getOrderById(Long orderId, User user) {
-        Order order = orderRepository.findByIdWithRelations(orderId)
-                .orElseThrow(() -> new ResourceNotFoundException("Order", "id", orderId));
 
-        // Check if user is authorized to view this order
-        boolean isManufacturer = order.getManufacturer().getId().equals(user.getId());
-        boolean isRetailer = order.getRetailer().getId().equals(user.getId());
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Order", "id", orderId));
+
+        boolean isManufacturer =
+                order.getManufacturer().getId().equals(user.getId());
+        boolean isRetailer =
+                order.getRetailer().getId().equals(user.getId());
 
         if (!isManufacturer && !isRetailer) {
             throw new AccessDeniedException("Order", orderId);
@@ -66,7 +61,7 @@ public class OrderQueryService {
     }
 
     /**
-     * Maps Order entity to OrderResponse DTO.
+     * Map Order → OrderResponse DTO
      */
     private OrderResponse mapToResponse(Order order) {
         return OrderResponse.builder()
@@ -80,15 +75,13 @@ public class OrderQueryService {
                 .manufacturerEmail(order.getManufacturer().getEmail())
                 .items(order.getItems().stream()
                         .map(this::mapItemToResponse)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 
-    /**
-     * Maps OrderItem entity to OrderItemResponse DTO.
-     */
     private OrderItemResponse mapItemToResponse(OrderItem item) {
-        BigDecimal subtotal = item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity()));
+        BigDecimal subtotal =
+                item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity()));
 
         return OrderItemResponse.builder()
                 .productId(item.getProduct().getId())
